frontend/features/header/styles/index.module.css
/* header */
.pageHeader {
  height: 60px;
  width: 100%;
  color: var(--text-color-iconic);
  background-color: transparent;
  padding: 10px 20px 10px 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.homePageHeader {
  margin-top: 15px;
}

@media (max-width: 768px) {
  .homePageHeader {
    margin: 0;
  }
}

.leftSide {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* ------------------------------------------------- */
/*    Header Dropdown Menu for Sidebar functions     */
/* ------------------------------------------------- */

.rightSide {
  display : flex;
  gap : 15px
}

.leftSide button {
  border: none;
  margin-left: 10px;
  margin-top: 10px;
  background: transparent;
  cursor: pointer;
}

.leftSide button.home {
  margin-top: 3px;
  color: var(--text-color-iconic)
}

.leftSide button:hover {
  border-radius: 7px;
  background: var(--headerMenu-btn-hover-bg);
}

.headerMenu .dropdownMenu {
  display: none;
}

.headerMenu .dropdownMenu.active {
  display: block;
  position: absolute;

  width: 140px;
  margin-top: 5px;
  margin-left: 10px;
  border: none;
  border-radius: 7px;
  font: normal medium "Exo2", "Montserrat", sans-serif;
  backdrop-filter: blur(5px);
  background: var(--headerMenu-bg);
  box-shadow: var(--headerMenu-shadow);
  z-index: 1;
}

.headerMenu .dropdownMenu ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.headerMenu .dropdownMenu ul li {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  border-radius: 7px;
  padding: 10px 10px;
  color: var(--text-color-opposite);
  cursor: pointer;
}

.headerMenu .dropdownMenu ul li:hover {
  background: var(--dropdownMenu-opt-hover-bg);
  color: var(--text-color-light);
}

.headerMenu .dropdownLastMenu ul li:hover {
  background: transparent;
}

/* ----------------------------------- */
/*       for other page titles         */
/* ----------------------------------- */
.title {
  font: normal 30px "Exo2", "Montserrat", sans-serif;
}

/* for PINAC Logo */
.homeTitle {
  font: bold 40px "nasa", sans-serif;
}

.bottomLine {
  margin-top: 3px;
  border-bottom: 2px solid var(--headerTitle-underline-color);
}

/* =========================== */
/*     Responsive Styles       */
/* =========================== */

@container (max-width: 992px) {
  .header {
    height: 60px;
    padding: 10px;
  }
}

@container (max-width: 576px) {
  .homeTitle {
    font-size: 35px;
  }
}

@container (max-width: 320px) {
  .title,
  .homeTitle {
    font-size: 30px;
  }

  .title {
    font-size: 25px;
  }

  .headerMenu .dropdownMenu.active {
    width: 120px;
  }
}

@container (max-width: 280px) {
  .headerMenu .dropdownMenu.active {
    width: 100px;
  }
}

